fixing overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@ body, html { height: 100%; }
 body {
   height: 100%;
   background-color: rgba(25,25,25,1);
+  margin: 0;
 }
 
 #root{
